<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always" />

    <item android:id="@+id/action_lamp"
        android:title="@string/action_lamp"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_desk"
        android:showAsAction="always" />

    <item android:id="@+id/action_power"
        android:title="@string/action_power"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_power"
        android:showAsAction="always" />
</menu>
