<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    tools:context="com.sakisds.arduinocontrol.ColorFragment">

    <LinearLayout
        android:id="@+id/layout_colorContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:orientation="horizontal"
            android:theme="@style/AppTheme.Red">

            <TextView
                android:layout_width="72dp"
                android:layout_height="fill_parent"
                android:gravity="center|left"
                android:text="@string/red"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textColor="@color/red" />

            <SeekBar
                android:id="@+id/seekBar_red"
                android:layout_width="0dp"
                android:max="255"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/editText_redValue"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:theme="@style/AppTheme.Green">

            <TextView
                android:layout_width="72dp"
                android:layout_height="fill_parent"
                android:gravity="center|left"
                android:text="@string/green"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textColor="@color/green" />

            <SeekBar
                android:id="@+id/seekBar_green"
                android:max="255"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/editText_greenValue"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:theme="@style/AppTheme.Blue">

            <TextView
                android:layout_width="72dp"
                android:layout_height="fill_parent"
                android:gravity="center|left"
                android:text="@string/blue"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textColor="@color/blue" />

            <SeekBar
                android:id="@+id/seekBar_blue"
                android:layout_width="0dp"
                android:max="255"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/editText_blueValue"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="12dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/layout_colorContainer"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="-28dp"
        android:background="@drawable/ripple"
        android:elevation="6dp"
        android:src="@drawable/ic_accept"
        android:stateListAnimator="@anim/fab_anim" />


    <LinearLayout
        android:id="@+id/layout_deskLampContainer"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_below="@id/fab"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:theme="@style/AppTheme.Orange"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_desklamp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline" />

        <Switch
            android:id="@+id/switch_deskLamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_ledModeContainer"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_below="@id/layout_deskLampContainer"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/background_light"
        android:theme="@style/AppTheme.Orange"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_ravemode"
            android:textAppearance="@android:style/TextAppearance.Material.Headline" />

        <Switch
            android:id="@+id/switch_ravemode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_below="@id/layout_ledModeContainer"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/background_light"
        android:theme="@style/AppTheme.Orange"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_temperature"
            android:textAppearance="@android:style/TextAppearance.Material.Headline" />

        <TextView
            android:id="@+id/textView_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"/>

    </LinearLayout>



</RelativeLayout>