<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sakisds.arduinocontrol.ColorFragment"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/layout_colorContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:animateLayoutChanges="true" >

        <LinearLayout
            android:id="@+id/layout_rgb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:elevation="8dp"
            android:orientation="vertical"
            android:visibility="gone"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="58dp"
                android:orientation="horizontal"
                android:theme="@style/AppTheme.Red">

                <TextView
                    android:layout_width="72dp"
                    android:layout_height="fill_parent"
                    android:gravity="center|left"
                    android:text="@string/red"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textColor="@color/red" />

                <SeekBar
                    android:id="@+id/seekBar_red"
                    android:layout_width="0dp"
                    android:max="255"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/editText_redValue"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:paddingTop="@dimen/activity_vertical_margin"/>

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_action_more"
                    android:id="@+id/button_more_close"
                    android:theme="@android:style/Theme.Material.Light"
                    android:background="@android:color/transparent"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:theme="@style/AppTheme.Green"
                android:paddingRight="40dp">

                <TextView
                    android:layout_width="72dp"
                    android:layout_height="fill_parent"
                    android:gravity="center|left"
                    android:text="@string/green"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textColor="@color/green" />

                <SeekBar
                    android:id="@+id/seekBar_green"
                    android:max="255"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/editText_greenValue"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textAppearance="@android:style/TextAppearance.Material.Small" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:theme="@style/AppTheme.Blue"
                android:paddingRight="40dp">

                <TextView
                    android:layout_width="72dp"
                    android:layout_height="fill_parent"
                    android:gravity="center|left"
                    android:text="@string/blue"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textColor="@color/blue" />

                <SeekBar
                    android:id="@+id/seekBar_blue"
                    android:layout_width="0dp"
                    android:max="255"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/editText_blueValue"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textAppearance="@android:style/TextAppearance.Material.Small" />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_action_more"
            android:layout_alignParentEnd="true"
            android:id="@+id/button_more_open"
            android:theme="@android:style/Theme.Material.Light"
            android:background="@android:color/transparent"/>

        <com.larswerkman.holocolorpicker.ColorPicker
            android:layout_width="fill_parent"
            android:layout_height="350dp"
            android:id="@+id/colorpicker"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <com.larswerkman.holocolorpicker.SaturationBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/saturationbar"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_below="@id/colorpicker"/>

        <com.larswerkman.holocolorpicker.ValueBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/valuebar"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_below="@id/saturationbar"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="12dp"
            android:layout_below="@id/valuebar"/>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/layout_colorContainer"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="-28dp"
        android:background="@drawable/ripple"
        android:elevation="6dp"
        android:src="@drawable/ic_accept"
        android:stateListAnimator="@anim/fab_anim" />

</RelativeLayout>